# TypeForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  install.sh  typeforge_learned.db
.agents/: AGENTS.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance.yml  question.yml
.github/workflows/: benchmark.yml  ci.yml  fmt.yml  nightly.yml  release.yml
adapters/fcitx5/cpp/: CMakeLists.txt  TypeForgeEngine.cpp  TypeForgeEngine.h  typeforge.conf.in
adapters/fcitx5/rust_bridge/: Cargo.toml
adapters/fcitx5/rust_bridge/src/: lib.rs
assets/: dictionary.csv  dictionary.manifest  metadata.json
assets/themes/catppuccin-mocha-mauve/: theme.conf  theme.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  theme.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: dict_format.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: ipc.rs  main.rs
crates/dict-compiler/: Cargo.toml
crates/dict-compiler/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/benches/: predict_benchmark.rs
crates/engine/src/: db.rs  engine.rs  lib.rs  traits.rs
crates/engine/src/dictionary/: immutable.rs  mod.rs  mutable.rs  symspell_impl.rs
crates/engine/src/learning/: learner.rs  metrics.rs  mod.rs  persistence.rs  pipeline.rs  scorer.rs  session.rs
crates/engine/src/pipeline/: builder.rs  candidate.rs  mod.rs  observer.rs  request.rs  result.rs  traits.rs
crates/engine/src/pipeline/expander/: mod.rs
crates/engine/src/pipeline/features/: mod.rs
crates/engine/src/pipeline/generator/: mod.rs
crates/engine/src/pipeline/postprocess/: adaptive_count.rs  mod.rs
crates/engine/src/pipeline/ranking/: mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docs/: faq.md  roadmap.md
docs/adapters/: fcitx5.md
docs/adr/: 0001-monorepo.md  0002-ipc-protocol.md  0003-learning-model.md  0004-fcitx-architecture.md
docs/architecture/: daemon.md  engine.md  learning.md  overview.md  protocol.md
docs/development/: benchmarking.md  build.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
installer/linux/: install.sh  uninstall.sh  verify.sh
scripts/: create_github_labels.sh
