[package]
name = "typeforge-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
typeforge-protocol = { path = "../protocol" }
typeforge-common = { path = "../common" }
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4"] }
colored = "3.1.1"
toml = "1.1.2"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
