[package]
name = "typeforge-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
typeforge-engine = { path = "../engine" }
typeforge-protocol = { path = "../protocol" }
typeforge-common = { path = "../common" }
tokio = { version = "1.37.0", features = ["full"] }
directories = "5.0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0"
