[package]
name = "typeforge-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
typeforge-engine = { path = "../engine" }
typeforge-protocol = { path = "../protocol" }
typeforge-common = { path = "../common" }
tokio = { version = "1.37.0", features = ["full"] }
directories = "5.0.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde_json = "1.0"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
tracing-appender = "0.2.5"
dirs = "6.0.0"

[dev-dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
flate2 = "1.0.30"
serde_json = "1.0"
