[package]
name = "typeforge-dict-compiler"
version = "0.2.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.28"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
sha2 = "0.10.8"
typeforge-common = { path = "../common" }
