[package]
name = "typeforge-engine"
version = "0.3.0"
edition = "2024"

[dependencies]
typeforge-protocol = { path = "../protocol" }
rusqlite = "0.31.0"
symspell = "0.5.2"
tracing = "0.1.40"
flate2 = "1.0.30"
csv = "1.3.0"
arc-swap = "1.7.1"
unicode-segmentation = "1.13.3"
serde = { version = "1.0.228", features = ["derive"] }
memmap2 = "0.9.11"
bytemuck = { version = "1.25.0", features = ["derive"] }
typeforge-common = { version = "0.3.0", path = "../common" }
smallvec = "1.15.2"
lru = "0.12.3"

[dev-dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
criterion = "0.8.2"

[[bench]]
name = "predict_benchmark"
harness = false
